[package]
name = "dsi-bitstream-py"
version = "0.9.1"
edition = "2024"
description = "Python bindings for the Rust implementation of read/write bit streams supporting several types of instantaneous codes"
repository = "https://github.com/zommiommy/dsi-bitstream-py/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["bitstream", "codes", "compression"]
categories = ["compression"]
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>", "Sebastiano Vigna <sebastiano.vigna@unimi.it>"]

[lib]
name = "dsi_bitstream"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py37"] }
dsi-bitstream = "0.9.1"
